# riskscout

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
.github/workflows/: deploy.yml
eval/: __init__.py  dataset.py  fin-test.md  report.py  runner.py
eval/real-docs/: bed-bath-beyond-10k-2023.txt  dollar-general-10k-2024.txt  dollar-general-10k-2025.txt  rite-aid-10k-2023.txt
infra/: ai-search.bicep  container-app.bicep  cosmos.bicep  main.bicep  monitoring.bicep  openai.bicep
src/riskscout/: __init__.py  config.py
src/riskscout/agent/: __init__.py  graph.py  state.py
src/riskscout/agent/nodes/: decision.py  extract.py  human_review.py  ingest.py  retrieval.py  route.py  score.py
src/riskscout/api/: main.py  routes.py
src/riskscout/infrastructure/: __init__.py  cosmos.py  observability.py  search.py
tests/: test_placeholder.py
